2004-Sep-20 New: filesystem/replacevar component

release 3.04.005_beta -> CVS
---------------------
2004-Aug-25 New: modified buildRelease.xml to include javacc.
2004-Aug-24 New: srcDir renamed to SFUSERCLASSPATH in shell scripts.
2004-Aug-24 Fix: sfBootTime attribute in rootProcess compound, now added during sfDeploy() lifecycle step
2004-Aug-24 Fix: ; in setSFProperties. Script breaks when using srcDir variable.
2004-Aug-23 Fix: race condition during component termination: sfPing and sfIsTerminated

release 3.04.004_beta
---------------------
2004-Aug-20 Release date
2004-Aug-20 Fix: Windows bin/security shell scripts
2004-Aug-20 Fix: build.xml "fixcrlf" task removed. Problems with MacOSX
2004-Aug-20 Add: build.xml to add files *.sfcd (SmartFrog configuration descriptors)
                 into jar files.

release 3.04.002_beta
---------------------
2004-Aug-19 Release date
2004-Aug-19 Fix: New improved shell scripts
2004-Aug-18 Fix: Important bug introduced in 3.04.000: cxt params were not
                 merged with sf description in PrimDeployerImpl.sfDeploy()
2004-Aug-17 Add: Improved sfRelsove illegalClassType exceptions
2004-Aug-17 Add: New sfGui version 0.7r01
2004-Aug-17 Add: Improved SchemaDescription phase.
2004-Aug-16 Add: New DATA keyword added to parser. Now "extends DATA" defines
                 a ComponentDescription that won't be automatically deployed by
                 the deployment engine.
                 It is equivalent to "extend LAZY".
2004-Aug-12 Add: SFClassLoader - Extra debugging messages with security.debug=true
2004-Aug-12 Add: New methods to get access to attributes/values are now
                 available in Context/Prim/ComponentDescription:
                    - Iterator sfAttributes()
                    - Iterator sfValues()
                    - sfContainsAttibute(attribute)
                    - sfContainsValue(value)

release 3.04.000_beta
---------------------
2004-Aug-12 Release date